# azure-cloud-storage

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 2025_06_22_0215-9e54ba0246cc_init_db.py  2025_06_22_0305-1f19cbc97aee_removed_column.py  2025_06_26_0053-fb5d6f18237d_path_column.py
src/application/: __init__.py  main.py
src/application/controller/: simple_controller.py
src/application/dataclasses/: file_metadata_dtc.py
src/application/enums/: file_status.py  regions.py
src/application/handlers/: upload_handler.py
src/application/managers/: sales_manager.py
src/application/models/: __init__.py  file_metadata.py
src/application/services/: azure_storage_service.py
src/application/utils/: tuples.py
